# OBS_MCP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  smithery.yaml
docs/: ARCHITECTURE.md  INSTALLATION.md  TOOLS.md
obs_mcp/: error_codes.py  main.py  obs_client.py  tool_registry.py
obs_mcp/tools/: config_tools.py  filter_tools.py  general_tools.py  input_tools.py  media_tools.py  output_tools.py  pipeline_tools.py  scene_item_tools.py  scene_tools.py  source_tools.py  stream_record_tools.py  transition_tools.py  ui_tools.py
tests/: test_pipeline_tools.py  test_tool_registry.py
