[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obs-mcp"
version = "0.1.0"
description = "MCP server for AI-driven OBS Studio control via obs-websocket v5 — scenes, sources, filters, audio mixer, streaming, recording, and studio mode."
license = "Apache-2.0"
authors = [
    { name = "xDarkzx" },
]
readme = "README.md"
keywords = ["obs", "obs-studio", "mcp", "model-context-protocol", "streaming", "ai", "obs-websocket"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "obsws-python>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["obs_mcp"]

[project.scripts]
obs-mcp = "obs_mcp.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
